<resources>
    <!-- <string name="facebook_app_id">1998959146812598</string>
     <string name="fb_login_protocol_scheme">fb1998959146812598</string>
    -->

    <string name="facebook_app_id">175552379960238</string>
    <string name="fb_login_protocol_scheme">fb175552379960238</string>

    <string name="google_key">AIzaSyAFq6TCSCj_m0A0tdM7WB9XHrUf0nroHXc</string>
    <string name="debug_google_key">AIzaSyCva24GvVqaN6iDtiPliZMRHC_JoaS-iQ</string>
    <string name="app_name">Dooit</string>
    <string name="slide2">Busca tareas cerca tuyo</string>
    <string name="slide3">Sigue los puntos y completa \ntu primera tarea</string>
    <string name="slide4">El pago se realiza \ndirectamente en tu cuenta \nbancaria</string>
    <string name="join_now">Únete Ahora</string>
    <string name="have_acc">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="fb_login">Inicia sesión con Facebook</string>
    <string name="fill_field">O si prefieres, rellena los campos a continuación</string>
    <string name="f_name">Nombre</string>
    <string name="email">Correo Electrónico</string>
    <string name="l_name">Apellidos</string>
    <string name="birthday">Cumpleaños</string>
    <string name="gender">Género</string>
    <string name="dont_have_acc">Don, no tengo una cuenta? Únete ahora</string>
    <string name="login">iniciar sesión</string>
    <string name="take_photo">Toma una foto</string>
    <string name="answer_que">Responde un \ncuestionario</string>
    <string name="write_review">Danos tú opinión</string>
    <string name="balance">Saldo de la cuenta</string>
    <string name="password">Password</string>
    <string name="profile">Perfil</string>
    <string name="seeker">Buscador</string>
    <string name="my_task">Mis tareas</string>
    <string name="bank">Banco</string>
    <string name="preference">Preferencias</string>
    <string name="more_opt">Más opciones</string>
    <string name="persona_info">Información personal</string>
    <string name="album_pic">Álbum de fotos</string>
    <string name="like_interest">Me gusta e intereses</string>
    <string name="did_you_forgot">¿Olvidaste tu contraseña?<u> Recupérala aquí</u></string>
    <string name="recover_password">Para iniciar el proceso de recuperación de \ncontraseña, indica tu e-mail</string>
    <string name="recover">Recuperar Contraseña</string>
    <string name="emp_email">El correo electrónico no puede estar vacío</string>
    <string name="emp_pass">La contraseña no puede estar vacía</string>
    <string name="invalid_email">Por favor introduzca un correo electrónico válido.</string>
    <string name="emp_first_name">Nombre no puede estar vacio.</string>
    <string name="continue_fb">Continuar con Facebook</string>
    <string name="ok">Ok</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="uploading">Actualizando</string>
    <string name="cancel">Cancelar</string>
    <string name="edit">Editar</string>
    <string name="prof_edt">Editar Perfil</string>
    <string name="birth_date">Fecha de Nacimiento</string>
    <string name="sex">Sexo</string>
    <string name="city">Ciudad</string>
    <string name="address">Direccion</string>
    <string name="emp_region">La región no puede estar vacía.</string>
    <string name="region">Región</string>
    <string name="list">Lista</string>
    <string name="map">Mapa</string>
    <string name="activity_task">Tareas Activas</string>
    <string name="prev_activity">Tareas Anteriores</string>
    <string name="prev_payment">Cartola</string>
    <string name="current_bal">Saldo Actual</string>
    <string name="network_conn">Sin conexión a Internet</string>
    <string name="network_msg">Parece que tu conexión a Internet está apagada. Por favor gírelo e inténtelo de nuevo.</string>
    <string name="permission">Permiso</string>
    <string name="wait">Por favor espere..</string>
    <string name="enable_services">Antes de continuar, \nnecesitamos habilitar algunos servicios</string>
    <string name="notifications">Notificaciones</string>
    <string name="location">Ubicacion</string>
    <string name="photo">Fotos</string>
    <string name="camera">Camara</string>
    <string name="microphone">Microfono</string>
    <string name="finalizar">Finalizar</string>
    <string name="configure_app">Siempre puedes revisar y volver a habilitar cualquiera de estos servicios desde la App de Configuracion</string>
    <string name="payment_config">Configuracion de Pago</string>
    <string name="sign_off">Cerrar Sesion</string>
    <string name="faq">Preguntas Frecuentes</string>
    <string name="comment_supp">Comentarios y Soporte</string>
    <string name="about">Acerca de Esta App</string>
    <string name="recommand">Recomienda a un Amigo</string>
    <string name="choose">Galería abierta</string>
    <string name="add_photo">Añadir foto</string>
    <string name="sign_off_msg">¿Quieres cerrar sesión?</string>
    <string name="search_filter">Filtros de Búsqueda</string>
    <string name="distance">DISTANCIA</string>
    <string name="categories">CATEGORIAS</string>
    <string name="all">Todas</string>
    <string name="task_detail">Detalles de la Tarea</string>
    <string name="start_task">Iniciar Tarea</string>
    <string name="no_active_task">No tienes ninguna tarea activa</string>
    <string name="no_previous_task">No has completado ninguna tarea aun</string>
    <string name="no_payment_history">No tienes pagos anteriores</string>
    <string name="name_holder">Nombre titular</string>
    <string name="rut_holder">RUT Titular</string>
    <string name="acc_type">Tipo de Cuenta</string>
    <string name="acc_number">Número de cuenta</string>
    <string name="accept">Aceptar</string>
    <string name="instruction">Instrucciones</string>
    <string name="poll">Encuesta</string>
    <string name="about_dooit">Acerca de Dooit</string>
    <string name="gps_title">El GPS está configurando</string>
    <string name="gps_msg">GPS no está habilitado. ¿Quieres ir al menú de configuración?</string>
    <string name="finish_survey">Finalizar Encuesta</string>
    <string name="confirm_survey">Confirmar Encuesta</string>
    <string name="ans_selection">Selecciona solo una alternative</string>
    <string name="no_active_avail">No tienes tareas disponibles</string>
    <string name="update_photo">Actualizar Foto...</string>
    <string name="update_video">Actualizar Video...</string>
    <string name="record_video">Grabar Video desde Cámara</string>
    <string name="select_video_fr_galery">Seleccionar Video desde Biblioteca</string>
    <string name="capture_photo">Tomar Foto desde Cámara</string>
    <string name="select_photo">Seleccionar Foto desde Biblioteca</string>
    <string name="location_desc">Para completar este paso de la encuesta, debes estar ubicado dentro del área señalada.</string>
    <string name="how_get">Cómo Llegar</string>
    <string name="remember">Recuérdame</string>
    <string name="video_desc">Para completar este paso de la encuesta te recomendamos hacerlo conectado a Wi-Fi.</string>
    <string name="activated_remember">Recordatorio Activado</string>
    <string name="notify_home">Serás notificado cuando te encuentres cerca del área de la tarea.</string>
    <string name="sure_finish">¿Estás seguro que deseas finalizar y enviar la Encuesta?</string>
    <string name="about_start_task1">Estás a punta de iniciar esta tarea. Una vez que comience tendrás </string>
    <string name="about_start_task2"> para completarla. ¿Deseas continuar?</string>
    <string name="finished">Encuesta Finalizada</string>
    <string name="waiting_validation">Enperando validacion</string>
    <string name="wait_cobra">Validada para Cobra</string>
    <string name="about_finished">La Encuesta ha sido enviada. Tu Tarea será validada en las próximas 24 horas por nuestro equipo Dooit</string>
    <string name="google_map">Google Map</string>
    <string name="not_location">Ubicación no seleccionada!</string>
    <string name="withdraw_fund">Retirar Fondos</string>
    <string name="account_edit">Editar Cuenta</string>
    <string name="going_to_retirar">Vas a Retirar</string>
    <string name="to_the_acc">A la Cuenta de:</string>
    <string name="withdraw_req">Retiro Solicitado</string>
    <string name="withdraw_time">Estamos procesando tu solicitud. retiro de fondos, los cuales se depositarán en tu cuenta el proximo dia Viernes hábil del mes.</string>
    <string name="sure_withdraw">¿Estás seguro que deseas retirar los fondos y cobrar a tu cuenta bancaria?</string>
    <string name="tv_processing">Procesando</string>
    <string name="payment_details">Detalles del Pago</string>
    <string name="done">Done</string>
    <string name="about_details">Dooit es una plataforma de crowdsourcing de datos. Nuestra comunidad de compradores recopila y comparte datos de los consumidores en tiempo real.

\n\nLa aplicación permite a los usuarios seleccionar una tarea según sus preferencias y completarla respondiendo unas simples preguntas. Una vez que nuestro equipo valida la tarea, el usuario recibe un pago y puede transferir fondos directamente a su cuenta bancaria.

\n\nDooit fue creado para ayudar a las marcas y minoristas a obtener una mejor comprensión de sus operaciones en la tienda y también a obtener información valiosa de sus clientes para servirles mejor.

\n\nActiva Research S.A , el propietario de Dooit, se dedica a mejorar esta aplicación para satisfacer mejor las necesidades de sus usuarios al solicitarles regularmente su opinión y comentarios a través de avisos e incentivos en la aplicación. Los usuarios pueden ponerse en contacto con nosotros en cualquier momento accediendo a la página 'Comentarios y Soporte' de la Aplicación. Nuestro dedicado equipo tiene como objetivo brindarles a los usuarios una respuesta dentro de las 24 horas.
</string>
    <string name="no_task_avail">No hay tareas \ndisponibles</string>
    <string name="select_file">Seleccionar Archivo</string>
    <string name="update_success">¡Actualizado con éxito!</string>
    <string name="failure">¡Fracaso!</string>
    <string name="info_desc">Para comenzar necesitamos que vayas a tu perfil y completes tus datos personales.</string>
    <string name="info_title1">Con Dooit Podras Ganar \nPlata Realizando Tareas</string>
    <string name="info_desc1">Para gestionar tu pago necesitamos que ingreses los datos de tu cuenta para transferir.</string>
    <string name="info_title2">Ya eres un Dooer!</string>
    <string name="info_desc2">En \"Buscador\" encontrarás tu primera tarea a realizar. Deberás responder algunas preguntas simples para conocerte más y enviarte nuevas tareas de acuerdo a tu perfil. Realizando esto, ! ya tendrás acceso a todas nuestras tareas disponibles !</string>
</resources>
