<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:weightSum="100">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="25"
            android:fontFamily="@font/sf_pro_display_light"
            android:paddingBottom="@dimen/ten_size"
            android:paddingLeft="@dimen/ten_size"
            android:paddingRight="@dimen/five_pad"
            android:paddingTop="@dimen/ten_size"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/edt_size" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="53"
            android:fontFamily="@font/sf_pro_display_light"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:singleLine="false"
            android:text="@string/withdraw_fund"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/edt_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_editor"
        android:layout_below="@+id/header"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/edt_size">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_light"
            android:text="@string/going_to_retirar"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_size"
            android:fontFamily="@font/sf_pro_display_light"
            android:text="$ _ _ _"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/thirty_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty_size"
            android:fontFamily="@font/sf_pro_display_light"
            android:text="@string/to_the_acc"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/edt_size" />

        <TextView
            android:id="@+id/tv_acc_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_size"
            android:fontFamily="@font/sf_pro_display_light"
            android:text="@string/name_holder"
            android:textSize="@dimen/left_dip" />


        <TextView
            android:id="@+id/tv_rut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_light"
            android:text="@string/rut_holder"
            android:textSize="@dimen/left_dip" />

        <TextView
            android:id="@+id/tv_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_light"
            android:text="@string/bank"
            android:textSize="@dimen/left_dip" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_acc_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_light"
                android:text="@string/acc_type"
                android:textSize="@dimen/left_dip" />

            <TextView
                android:id="@+id/tv_acc_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/five_pad"
                android:fontFamily="@font/sf_pro_display_light"
                android:text="@string/acc_number"
                android:textSize="@dimen/left_dip" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_withdraw"
        android:layout_marginLeft="@dimen/edt_size"
        android:layout_marginRight="@dimen/edt_size"
        android:background="@drawable/instruction_bg"
        android:fontFamily="@font/sf_pro_display_light"
        android:gravity="center"
        android:padding="@dimen/tab_text"
        android:text="@string/account_edit"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/edt_size" />

    <TextView
        android:id="@+id/tv_withdraw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/ten_size"
        android:layout_marginLeft="@dimen/edt_size"
        android:layout_marginRight="@dimen/edt_size"
        android:layout_marginTop="@dimen/edt_size"
        android:background="@drawable/survey_bg"
        android:enabled="false"
        android:fontFamily="@font/sf_pro_display_light"
        android:gravity="center"
        android:padding="@dimen/tab_text"
        android:text="@string/withdraw_fund"
        android:textColor="@color/colorText"
        android:textSize="@dimen/edt_size" />

</RelativeLayout>
