<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="@dimen/tab_text"
        android:paddingLeft="@dimen/tab_text"
        android:paddingTop="@dimen/tab_text"
        android:text="@string/gps_title"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/edt_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/tab_text"
        android:text="@string/gps_msg"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="@dimen/tab_text"
        android:text="@string/ok"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/edt_size"
        android:textStyle="bold" />
</LinearLayout>