<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.dooit.activities.questions.SimpleAlternativeActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five_pad"
            android:fontFamily="@font/sf_pro_display_light"
            android:padding="@dimen/ten_size"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/edt_size" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/sf_pro_display_light"
            android:padding="@dimen/ten_size"
            android:text="0/0"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/edt_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/sf_pro_display_light"
            android:padding="@dimen/ten_size"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/colorLight"
            android:textSize="@dimen/edt_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_question_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginLeft="@dimen/thirty_size"
        android:layout_marginRight="@dimen/thirty_size"
        android:layout_marginTop="@dimen/five_pad"
        android:fontFamily="@font/sf_pro_display_light"
        android:text="@string/payment_config"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/top_margin" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_question_name"
        android:layout_marginLeft="@dimen/thirty_size"
        android:layout_marginRight="@dimen/thirty_size"
        android:layout_marginTop="@dimen/five_pad"
        android:fontFamily="@font/sf_pro_display_light"
        android:text="@string/location_desc" />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/map_bg" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_how_get"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/ten_size"
            android:text="@string/how_get"
            android:textColor="@color/colorHint"
            android:textSize="@dimen/edt_size" />

        <TextView
            android:id="@+id/tv_remember"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/ten_size"
            android:text="@string/remember"
            android:textColor="@color/colorHint"
            android:textSize="@dimen/edt_size" />
    </LinearLayout>

</RelativeLayout>
