<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five_pad"
            android:padding="@dimen/ten_size"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/edt_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/ten_size"
            android:text="@string/search_filter"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/edt_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/ten_size"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/edt_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edt_size"
        android:padding="@dimen/five_pad"
        android:text="@string/distance" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:padding="@dimen/ten_size"
        android:weightSum="10">

        <SeekBar
            android:id="@+id/skb_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8.5"
            android:max="200"
            android:maxHeight="2dp"
            android:progress="200"
            android:progressDrawable="@drawable/progress_back"
            android:thumb="@mipmap/ic_thumb" />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="200km"
            android:textColor="@color/colorDarkGray" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edt_size"
        android:padding="@dimen/five_pad"
        android:text="@string/categories" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray" />

    <RelativeLayout
        android:id="@+id/rl_category"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/ten_size"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/sixty_size"
            android:text="@string/all" />

        <ImageView
            android:id="@+id/iv_all_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/ten_size"
            android:padding="@dimen/left_dip"
            android:src="@mipmap/ic_check_all" />

    </RelativeLayout>

    <ListView
        android:id="@+id/lv_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:divider="@null"
        android:overScrollMode="never" />
</LinearLayout>
